- Fix enderpearl phasing through blocks
- Add claim homes set via /flan setHome in a claim to the players position.
  The claim permission to allow others do that too is EDITCLAIM
- Add /flan teleport to tp to a claims home.
  Default global value is ALLFALSE so disabled.
- Add NOHUNGER permission: Disables hunger in claims
  Default global value is ALLFALSE so disabled.

Flan 1.4.2
======================
- Fix a ticking player crash
- Fix anvil gui not updating client xp use
- Add ability to name claims.
  Names have to be unique for each player and claim.
  No additional feature for that (yet)
- Add blockEntityTagIgnore config
  Blockentities are checked against the strings here and if their tag
  matches one they will be ignored for a permission check.
  Useful for blockentities that should only be accessible under certain circumstances.
  Default values: ["IsDeathChest"] for vanilla death chest mod (only for version 2.0.0+)
- Add entityTagIgnore config same as blockEntityTagIgnore but it will only
  check against scoreboard tags. Default "graves.marker" is for vanilla tweaks graves.
  Keep in mind that the items dropped by graves are not player bound so if a claim disables
  item pickups you will not be able to pick up the items

Flan 1.4.1
======================
- Change globalDefaultPerms to use a version where you can specify if its modifiable or not
  Valid values are:
  ALLTRUE: Permission is true everywhere and players are unable to change it in claims
  ALLFALSE: Permission is false everywhere and players are unable to change it in claims
  TRUE: Permission is true in non claimed areas
  FALSE: Permission is false in non claimed areas
  Old configs will get auto converted: false -> ALLFALSE and true -> ALLTRUE
  Basically now a worldguard version
- Add locking items when the player dies so other players cant pick it up.
  Use /flan unlockItems to allow it.
- /flan help finished: command are clickable now and give additional info on the commands